# fi

./: Cargo.toml  LICENSE  README.md
shell-completion/: Cargo.toml
shell-completion/src/: main.rs
src/: call.rs  complete.rs  disasm.rs  explorer.rs  listen.rs  main.rs  options.rs  search.rs  show.rs  util.rs
src/listen/: options.rs  server.rs
src/search/: options.rs
src/show/: options.rs
