[package]
name = "fi"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "shell-completion" ]

[dependencies]
# cli
anyhow = "1"
bstr = "1"
clap = { version = "4", features = [ "derive" ] }

# ipc
libc = "0.2"
directories = "6"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "sync", "net", "io-util", "signal", "macros" ] }
serde = { version = "1", features = [ "derive" ] }
cbor4ii = { version = "1", features = [ "use_std", "serde1" ] }
data-encoding = "2"
scopeguard = "1"
passfd = "0.1"

# object
memmap2 = "0.9"
object = "0.37"
indexmap = "2"
aho-corasick = "1"
symbolic-demangle = { version = "12", default-features = false, features = [
	"rust",
	"cpp",
	"msvc"
] }
addr2line = "0.25"

# feature
regex = { version = "1", default-features = false, features = [ "std", "perf" ] }
capstone = "0.13"
